# app_hubautomatiza_frontend

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  readme.md
.github/workflows/: main.yml
src/app/acesso/: route.py
src/app/acesso/templates/: form.html  list.html
src/app/auth/: auth_route.py  route.py
src/app/auth/templates/: login.blue.html  login.html  recovey_password.html
src/app/caixa/: route.py
src/app/caixa/templates/: form.html  form_processar.html  list.html
src/app/caixa_historico/: route.py
src/app/caixa_historico/templates/: form.html  list.html
src/app/categoria/: route.py
src/app/categoria/templates/: form.html  list.html
src/app/conta/: route.py
src/app/conta_tipo/: route.py
src/app/contato/: route.py
src/app/contato_tipo/: route.py
src/app/documento_tipo/: route.py
src/app/empresa/: route.py
src/app/endereco/: route.py
src/app/grupo_acesso/: route.py
src/app/grupo_acesso_rota/: route.py
src/app/grupo_acesso_usuario/: route.py
src/app/home/: route.py
src/app/integracao/: route.py
src/app/integracao_grupo/: route.py
src/app/integracao_historico_saldo_empresa/: route.py
src/app/integracao_saldo_empresa/: route.py
src/app/lote/: route.py
src/app/pagamento_tipo/: route.py
src/app/pessoa/: route.py
src/app/pessoa_tipo/: route.py
src/app/relatorio/: route.py
src/app/rota/: route.py
src/app/status/: route.py
src/app/usuario/: route.py
src/system/core/: flash.py
src/system/integration/: api_crm.py  api_crm_dataclass.py  utils.py
(+109 files in other folders)
