[tool.poetry]
name = "front-crm"
version = "0.1.0"
description = ""
authors = ["Manoel Messias <manoelmsnsi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.4"
requests = "^2.32.3"
uvicorn = "^0.30.1"
itsdangerous = "^2.2.0"
elastic-apm = "^6.22.3"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
